style: 💄 fix encoding-demo chart titles on narrow devices

--- a/src/EncodingDemo.scss
+++ b/src/EncodingDemo.scss
@@ -26,6 +26,12 @@
             flex-direction: column !important;
         }
     }
+
+    @media (max-width: 1080px) {
+        .chartitle {
+            font-size: 2.2vw;
+        }
+    }
     
     @media (min-width: 1081px) {
         #process-container, .vert-control-wrapper {
